2014-05-07  William A. Perkins  <william.perkins@pnnl.gov>

	* transport_only_module.f90 (transport_only_check): do a better
	check of time range in transport only solutions

	* scalars_module.f90 (allocate_scalarblock_components): allocate
	srcflux 

	* scalar_solve.f90 (default_scalar_bc): initialize srcconc and
	srcflux 
	(apply_scalar_bc): new "IN SOURCE FLUX" condition recognized
	(apply_scalar_source): apply new "IN SOURCE FLUX" condition

2014-05-01  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (apply_scalar_bc, apply_scalar_source): scalar
	concentration conversion was not applied for SOURCE BCs

2014-04-25  William A. Perkins  <william.perkins@pnnl.gov>

	* plot_output.f90 (plot_print): compute velocity shift before diag

	* block_hydro_bc.f90 (block_compute_bc_flux): do not compute areas
	for 'IN' BCs
	(apply_hydro_bc): (re)implement IN SOURCE/SINK BC; this
	implementation requires that the area be solely owned by a single
	process; an attempt to warn the user is made if that condition is
	not met.  

	* hydro_bc.f90 (read_bcspecs): fix the way FLUX conditions
	allocate space for area (bank conditions only, still not adequate
	for internal)

	* scalar_bc.f90 (set_scalar_area): add
	(read_scalar_bcspecs): recognize SOURCE BC specifications

	* scalar_solve.f90 (apply_scalar_bc, apply_scalar_source):
	(re)implement SOURCE scalar BC's

	* scalars_module.f90 (allocate_scalarblock_components): declare
	and allocate an array for SOURCE concentrations  

2014-04-03  William A. Perkins  <william.perkins@pnnl.gov>

	* hotstart.f90 (write_restart): a GA sync was necessary to avoid a
	race 

	* block_initialization.f90 (block_initialization): all entries in
	a character parameter array must be the same size?

	* mass2_parallel.f90 (banner): make work with PETSc 3.4.4

	* solver_petsc.F90: changes needed to make work with PETSc 3.4.4;
	not sure if earlier PETSc versions work anymore

2014-03-26  William A. Perkins  <william.perkins@pnnl.gov>
